# sigma_bot

./: .gitignore  Bot.sh  Cargo.toml  Lavalink.sh  README.md  application.yml  bot.sh  example.env  lauch_link.sh  lavalink.sh
.github/workflows/: Lints.yml
src/: commands.rs  main.rs
src/commands/: admin.rs  games.rs  maths.rs  mod.rs  owners.rs  voice.rs  words.rs
src/commands/admin/: mod.rs  quit.rs  restart.rs  update.rs
src/commands/games/: apex.rs  squirdle.rs
src/commands/info/: about.rs  mod.rs  ping.rs
src/commands/maths/: add.rs  divide.rs  multiply.rs  power.rs  random.rs  subtract.rs
src/commands/voice/: join.rs  leave.rs  mod.rs  now_playing.rs  pause.rs  play.rs  queue.rs  resume.rs  skip.rs  stop.rs  volume.rs
src/commands/words/: define.rs  libgen.rs  mod.rs  poll.rs  synonyms.rs
src/util/: mod.rs  poll_utils.rs
