[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
dotenv = "0.15"
chrono = "0.4"
rand = "0.8"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
branch = "master"
features = ["rustls", "serenity", "songbird", "tracing-log"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.serenity]
version = "0.10"
features = ["client", "cache", "framework", "standard_framework", "rustls_backend", "voice"]

[dependencies.songbird]
version = "0.2"
default-features = false
features = ["serenity-rustls", "gateway"]
