[package]
name = "sigma_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.7"
dotenv = "0.15"
rand = "0.8"
regex = "1.6"
reqwest = "0.11"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
branch = "master"
features = ["rustls", "serenity", "songbird", "tracing-log"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.10"
features = ["client", "cache", "framework", "standard_framework", "rustls_backend", "voice"]

[dependencies.songbird]
version = "0.2"
default-features = false
features = ["serenity-rustls", "gateway"]

[dependencies.tokio]
version = "1.19"
features = ["full"]
